fixed errors, the header and h2 seem a little off with alignment but its not

--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 *{
 	font-family: 'Permanent Marker', cursive;
 	color: black;
+	margin: 20px 10px 20px 10px;
 }
